2004-01-31  Žygimantas Beručka  <uid0@tuxfamily.org>

	* configure.in: Added "lt" to ALL_LINGUAS.

2004-01-23  Grzegorz Golawski <grzegol@pld-linux.org>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
	  services-conf.in, time-conf.in, users-conf.in: Added patch to
	  add support for PLD 1.1 and 1.99

2004-01-16  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "no" to ALL_LINGUAS. 

2004-01-14  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Added "ko" to ALL_LINGUAS.

2004-01-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: delay the call to wvdialconf to the moment in which
	  the config is applied, so when wvdialconf is buggy and blocks it 
	  doesn't affect in the tool's startup

2004-01-07  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.31.1

2004-01-07  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* configure.in: updated intltool version to 0.28
	* Makefile.am: added OrigTree.pm to EXTRA_DIST
	* .cvsignore: added intltool-*

2004-01-07  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service-list.pl.in: fixed some strings, thanks to Elros Cyriatan

2004-01-07  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* services-conf.in, services.pl.in, time-conf.in, users-conf.in,
	  network-conf.in, network.pl.in: added support for mandrake 9.2

2004-01-07  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: (gst_network_slackware91_interface_activate_by_dev), 
	  (gst_network_slackware91_interface_activate): added functions to
	  activate and deactivate interfaces in slackware

2004-01-06  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in, network.pl.in: added partial support for slackware 
	  9.1, ATM it only supports eth interfaces config (wireless eth ifaces
	  too)
	* service.pl.in: (gst_service_sysv_installed),
	  (gst_service_sysv_list_any_installed): replaced by
	  (gst_service_installed) and (gst_service_list_any_installed).